update schema for send grid email model
