# src/api/v1/models/SendGridMessage.ts
@@ -10,15 +10,32 @@ export class SendGridMessage {
 
         this.data = {};
 
+        this.data.personalizations = [];
+        this.data.personalizations[0] = {};
+
         if (request.mail_to) {
 
-            const personalizations = [];
             const emails = request.mail_to.map((e: any) => ( {"email": e} ));
-            const to = {
-                "to": emails
-            }
-            personalizations.push(to);
-            this.data.personalizations = personalizations;
+            this.data.personalizations[0].to = emails;
+        }
+
+        if (request.mail_cc) {
+
+            const emails = request.mail_cc.map((e: any) => ( {"email": e} ));
+            this.data.personalizations[0].cc = emails;
+        }
+
+        if (request.mail_bcc) {
+
+            const emails = request.mail_bcc.map((e: any) => ( {"email": e} ));
+            this.data.personalizations[0].bcc = emails;
+        }
+
+        let subject = "TEST SUBJECT";
+
+        if (request.subject) {
+            subject = request.subject;
+            this.data.subject = subject;
         }
 
         if (request.mail_from) {
@@ -26,21 +43,22 @@ export class SendGridMessage {
             this.data.from = from;
         }
 
-        if (request.subject) {
-            const subject = request.subject;
-            this.data.subject = subject;
-        }
+        let content = [
+            {
+                "type": "text/plain",
+                "value": "TEST TEXT"
+            }
+        ]
 
         if (request.text) {
-            const content = [
+            content = [
                     {
                         "type": "text/plain",
                         "value": request.text
                     }
                 ]
-            
-            this.data.content = content;
         }
+        this.data.content = content;
     }
 
     get Data(): any {
